# Good-metaphor-map

./: Dockerfile.api  Makefile  README.md  __init__.py  docker-compose.yml  pyproject.toml
configs/: intent_cls.yaml
core/: __init__.py  schema.py
data/prompts/: commonality_extraction.txt  entity_expansion.txt  scene_generalization.txt  synthesis.txt
examples/: ablation_study.py  basic_usage.py
experiments/: __init__.py  ablation.py
scripts/: evaluate.ps1  evaluate.sh  start.ps1  start.sh
src/crawler/: crawl_cxd.py
src/generate/: __init__.py  batch_gen.py  generator.py  pipeline.py
src/merge/: merge_best.py
src/minieval/: __init__.py  evaluator.py  mef.py  score.py
src/models/llm_wrappers/: __init__.py  base.py  gpt4.py  qwen.py
src/search/: api.py  index.py
src/tasks/: __init__.py  intent.py
src/train/: intent_dataset.py  train.py
src/xcultural/: label.py  labeler.py
tests/: test_crawler.py  test_evaluator.py  test_generator.py  test_labeler.py
