[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaphor-goodm"
version = "0.1.0"
description = "GoodM metaphor generation and evaluation system"
authors = [
    { name = "Author", email = "author@example.com" }
]

[project.dependencies]
python = ">=3.8"
pandas = "^2.0.0"
numpy = "^1.24.0"
transformers = "^4.30.0"
sentence-transformers = "^2.2.0"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
milvus = "^2.3.0"
hydra-core = "^1.3.0"
aiohttp = "^3.8.0"
aiolimiter = "^1.0.0"
diskcache = "^5.6.0"
bert-score = "^0.3.13"
dashscope = "^1.20.0"
openai = "^1.12.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.8"
strict = true